Header-Based Routing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: header-v1
spec:
  selector:
    matchLabels:
      app: header
      version: v1
  replicas: 3
  template:
    metadata:
      labels:
        app: header
        version: v1
    spec:
      containers:
      - image: dogra21703/istio-header:v1
        name: dogra
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: header-v2
spec:
  selector:
    matchLabels:
      app: header
      version: v2
  replicas: 3
  template:
    metadata:
      labels:
        app: header
        version: v2
    spec:
      containers:
      - image: dogra21703/istio-header:v2
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: header-v3
spec:
  selector:
    matchLabels:
      app: header
      version: v3
  replicas: 3
  template:
    metadata:
      labels:
        app: header
        version: v3
    spec:
      containers:
      - image: dogra21703/istio-header:v3
        name: devops
        ports:
        - containerPort: 80
