Header-Based Routing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: header-svc
spec:
  selector:
    app: header
  ports:
   - protocol: "TCP"
     port: 80
     targetPort: 80
  type: ClusterIP
