Header-Based Routing/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-virtual-service
spec:
  hosts:
    - "sohan.com"   
  gateways:
    - "header"
    - mesh
  http:
  - timeout: 0.001s
    fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 10s
    match:
      - headers:
          user:
            exact: v1
    route:
    - destination:
        host: header-svc
        subset: v1
    retries:
      attempts: 3
      perTryTimeout: 3s
      retryOn: 5xx
  - timeout: 0.001s
    fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 20s
    match:
      - headers:
          user:
            exact: v2
    route:
    - destination:
        host: header-svc
        subset: v2
    retries:
      attempts: 3
      perTryTimeout: 2s  
      retryOn: 5xx
  - route:
    - destination:
        host: header-svc 
        subset: v3
    timeout: 0.01s
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
    # mirror:
    #   host: header-svc
    #   subset: v1
    # mirrorPercent: 100
